--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -2,6 +2,7 @@
 
 .list {
   padding: 1rem;
+  height: 100vh;
 
   &__title {
     font-size: 1.8rem;
