--- a/src/pages/EditList/EditList.scss
+++ b/src/pages/EditList/EditList.scss
@@ -4,5 +4,7 @@
 .edit-list-items {
   &__done-button {
     @include button;
+    margin-top: 1.5rem;
+    margin-bottom: 2.5rem;
   }
 }
