--- a/src/pages/Notebook/notebook.scss
+++ b/src/pages/Notebook/notebook.scss
@@ -3,6 +3,7 @@
 .notebook {
   min-height: 100vh;
   color: $primary1;
+  overflow: auto;
 }
 
 a {
